--- a/.github/workflows/_config.yml
+++ b/.github/workflows/_config.yml
@@ -114,7 +114,7 @@ quicklinks:
 - title: View the specification
   url: /format/
 - title: Contribute on GitHub
-  url: https://github.com/json-api/json-api
+  url: https://github.com/guijujo/datajson
 
 profile_categories:
   - Pagination
