--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^4.11.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.18.0",
-    "sweetalert2": "^11.6.13",
+    "sweetalert2": "^11.9.0",
+    "sweetalert2-react-content": "^5.0.7",
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
